# genericZephyrProject

./: README.md  west.yml
apps/DataSender/: CMakeLists.txt
apps/DataSender/src/: DataSender.c  DataSender.h
apps/HelloWorld/: CMakeLists.txt
apps/HelloWorld/src/: HelloWorld.c  HelloWorld.h
docker/: Dockerfile
project_1/: CMakeLists.txt
project_1/src/: main.c
